--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server & open http://localhost:3333",
     "build": "webpack -w",
     "test": "mocha ./test/setup.js ./test/tests.js"
   },
@@ -15,7 +15,9 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "gsap": "^1.19.0",
     "react": "^15.3.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
