--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "react-router-scroll": "^0.4.1",
     "redux": "^3.6.0",
     "webpack": "^1.13.3"
   },
