--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "express": "^4.14.0",
     "gsap": "^1.19.0",
     "react": "^15.3.2",
     "react-addons-transition-group": "^15.4.2",
