--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server & open http://localhost:3333",
+    "start": "forever start ./server/index.js",
+    "dev": "webpack-dev-server & open http://localhost:3333",
     "build": "webpack -w",
     "test": "mocha ./test/setup.js ./test/tests.js"
   },
@@ -16,6 +17,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "express": "^4.14.0",
+    "forever-monitor": "^1.7.1",
     "gsap": "^1.19.0",
     "react": "^15.3.2",
     "react-addons-transition-group": "^15.4.2",
