--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "personal website",
   "main": "index.js",
   "scripts": {
-    "start": "forever start server/index.js",
+    "start": "node server/index.js",
     "dev": "webpack-dev-server & open http://localhost:3333",
     "build": "webpack -w",
     "test": "mocha ./test/setup.js ./test/tests.js"
