--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
+    "deploy": "git push heroku master",
     "dev": "webpack-dev-server & open http://localhost:3333",
     "build": "webpack -w",
     "test": "mocha ./test/setup.js ./test/tests.js"
